--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,30 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#signin {
+  background-color: #7181a0;
+  min-height: 50px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+
+#signedIn {
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-size: calc(3px + 2vmin);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formLabel {
+      margin: 10px;
+    float: left;
 }
+
